--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "node-example",
   "version": "0.0.1",
   "dependencies": {
-    "express": "2.2.0"
+    "express": "2.2.0",
+    "hiredis", "0.1.12",
+    "redis": "0.6.0"
   }
 }
 
