--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
     "express": "2.2.0",
-    "hiredis", "0.1.12",
+    "hiredis": "0.1.12",
     "redis": "0.6.0"
   }
 }
