--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "node-example",
-  "version": "0.0.1",
+  "name": "fisheye-cafe",
+  "version": "0.1.0",
   "dependencies": {
     "express": "2.2.0",
     "hiredis": "0.1.12",
-    "redis": "0.6.0"
+    "redis": "0.6.0",
+    "mustache": "0.3.1-dev"
   }
 }
 
