--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "hiredis": "0.1.12",
         "redis": "0.6.0",
         "mustache": "0.3.1-dev",
-        "underscore": "1.1.6"
+        "underscore": "1.1.6",
+        "backbone": "0.3.2"
     },
     "repositories": [
         {
