updated for redis-user renaming

--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
         "mustache": "0.3.1-dev",
         "underscore": "1.1.6",
         "backbone": "0.3.2",
-        "redis-user-and-role": ">=0.1.0"
+        "redis-user": ">=0.1.0"
     },
     "repositories": [
         {
             "type": "git",
-            "url": "git@github.com:CatChen/fisheye-cafe.git"
+            "url": "git://github.com/CatChen/fisheye-cafe.git"
         }
     ]
 }
