--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
         "web": "http://catchen.me"
     },
     "dependencies": {
-        "hiredis": "0.1.12",
-        "redis": "0.6.0",
-        "express": "2.2.0",
-        "connect-redis": "1.0.6",
-        "mustache": "0.3.1-dev",
-        "underscore": "1.1.6",
-        "backbone": "0.3.2",
+        "hiredis": ">=0.1.12",
+        "redis": ">=0.6.0",
+        "express": ">=2.2.0",
+        "connect-redis": ">=1.0.6",
+        "mustache": ">=0.3.1-dev",
+        "underscore": ">=1.1.6",
+        "backbone": ">=0.3.2",
         "redis-user": ">=0.2.0"
     },
     "repositories": [
