--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "redis": ">=0.6.0",
         "express": ">=2.2.0",
         "connect-redis": ">=1.0.6",
-        "mustache": ">=0.3.1-dev",
+        "stache": ">=0.1.0",
         "underscore": ">=1.1.6",
         "backbone": ">=0.3.2",
         "redis-user": ">=0.2.0"
